--- a/src/componentes/ElementosVisuais/LayoutContextualizado/styles.module.css
+++ b/src/componentes/ElementosVisuais/LayoutContextualizado/styles.module.css
@@ -16,18 +16,21 @@
     display: flex;
     flex-direction: column;
     flex: var(--proporcao-conteudo, 0.88);
+    gap: 1vw;
+    padding: .7% .4%;
     background-color: #312246b3;
-    overflow: hidden;
     border-radius: 1vw;
+    align-items: center;
+}
+
+#titulo_conteudo {
+    font-size: 2.7em;
 }
 
 #recipiente_layout_contextualizado_menu {
     display: flex;
     flex-direction: column;
     flex: var(--proporcao-menu, 0.12);
-    height: 100%;
-    background-color: #312246b3;
-    padding: 1vh .2vw;
 }
 
 .recipiente_linha_acao_mestre {
