--- a/src/componentes/ElementosDeMenu/ListaAcoesMestre/styles.module.css
+++ b/src/componentes/ElementosDeMenu/ListaAcoesMestre/styles.module.css
@@ -1,9 +1,7 @@
 #recipiente_lista_acoes_pagina_mestre {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    background-color: #312246b3;
-    padding: 1vh .2vw;
+    width: 16vw;
 
     & .titulo_permissao_mestre {
         text-align: center;
