--- a/src/app/(paginas)/admin/styles.module.css
+++ b/src/app/(paginas)/admin/styles.module.css
@@ -15,3 +15,11 @@
     font-weight: bolder;
     font-family: var(--fonte-junge) !important;
 }
+
+#recipiente_lista_acoes_admin {
+    display: flex;
+    flex-direction: column;
+    width: 16vw;
+    padding: 0 0 0 2%;
+    gap: 2vh;
+}
