--- a/src/app/(paginas)/aventura/styles.module.css
+++ b/src/app/(paginas)/aventura/styles.module.css
@@ -1,21 +1,8 @@
-#recipiente_pagina_assistir_aventura {
-    width: 100%;
-    height: 100%;
-    padding: .5vh .6vw;
-}
-
-#recipiente_corpo_pagina_assistir_aventura {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    gap: 1vw;
-}
-
 #recipiente_corpo_conteudo_episodio {
     display: flex;
     flex-direction: column;
-    flex: .88;
+    flex: 1;
+    width: 100%;
     border-radius: 1vw;
     overflow: hidden;
     position: relative;
@@ -39,13 +26,10 @@
     z-index: 2;
 }
 
-#recipiente_menu_lateral_episodios {
-    display: flex;
-    flex-direction: column;
-    flex: .12;
-    height: 100%;
-    padding: 1vh .2vw;
-    background-color: #3122464d;
+#recipiente_menu_aventura {
+    width: 13vw;
+    padding: 1%;
+    overflow-x: hidden;
 }
 
 .recipiente_linha_episodio {
