--- a/src/componentes/Elementos/Chat/styles.module.css
+++ b/src/componentes/Elementos/Chat/styles.module.css
@@ -1,36 +1,48 @@
 #recipiente_chat {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#recipiente_corpo_chat {
     display: flex;
     flex-direction: row;
     position: absolute;
-    width: 30%;
-    height: 2.2rem;
-    bottom: 2%;
-    left: 2%;
-    gap: 1%;
-    background-color: #000c;
-    border: 1px solid #b79051;
-    border-radius: 1vh;
+    width: 40vw;
+    aspect-ratio: 1 / 1;
+    gap: 1vw;
+    bottom: 0;
+    left: 0;
+    padding: 1% .6%;
+    background-color: #000000ED;
+    border-radius: 0 20px 0 0;
     z-index: calc(var(--zindex-final-chat) - 0);
-    padding: .4vh .3vw;
 }
 
-#recipiente_icone_chat {
-    position: relative;
-    height: 100%;
+#recipiente_conteudo_conversa {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 1%;
 }
 
-#recipiente_icone_chat svg {
-    transform: scaleX(-1);
-    color: #d2C31A;
-}
-
-#recipiente_campo_texto_chat {
+#recipiente_mensagens_conversa {
     flex: 1;
 }
 
-#recipiente_campo_texto_chat input {
-    all: unset;
-    height: 100%;
+#recipiente_input_conversa input {
     width: 100%;
-    font-size: 1.3rem;
+}
+
+#recipiente_salas {
+    width: 28%;
+    border-left: 1px solid white;
+}
+
+#recipiente_lista_salas {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 0 7%;
 }
