--- a/src/componentes/ElementosDeMenu/ListaAcoesMestre/styles.module.css
+++ b/src/componentes/ElementosDeMenu/ListaAcoesMestre/styles.module.css
@@ -13,8 +13,15 @@
     }
 }
 
-.recipiente_linha_acao_mestre {
+.recipiente_item_mestre {
     user-select: none;
     border-radius: 5px;
     padding: 3% 2%;
+}
+
+.recipiente_subitens_mestre {
+    display: flex;
+    flex-direction: column;
+    margin-left: 1vw;
+    margin-top: .3vh;
 }
