--- a/src/app/(paginas)/minhas-paginas/mestre/rascunhos/styles.module.css
+++ b/src/app/(paginas)/minhas-paginas/mestre/rascunhos/styles.module.css
@@ -1,7 +1,7 @@
 #recipiente_area_rascunhos {
     display: flex;
     flex-direction: column;
-    gap: 7%;
+    gap: 3em;
     width: 100%;
     height: 100%;
     align-items: center;
@@ -13,6 +13,7 @@
     backdrop-filter: blur(1em) brightness(.3);
     border-radius: 1em;
     overflow: hidden;
+    flex-shrink: 0;
 
     &:hover {
         box-shadow: 0px 0px 9px 0px #ffffff;
@@ -24,20 +25,9 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
-    gap: 2vw;
-    row-gap: 3vh;
+    gap: 1em;
+    row-gap: 1.1em;
+    flex-wrap: wrap;
+    align-content: flex-start;
     justify-content: center;
-}
-
-.recipiente_item_rascunho {
-    cursor: pointer;
-    width: 8vw;
-    height: 10%;
-    text-align: center;
-    align-items: center;
-    backdrop-filter: blur(1em) brightness(.5);
-
-    &:hover {
-        box-shadow: 0px 0px 9px 0px #ffffff;
-    }
 }
