--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   --zindex-final-swiperEsquerda: 999;
   --zindex-final-chat: 899;
   --zindex-final-modal: 1099;
+  --zindex-final-dialog: 1199;
 
   --cor-aviso: #DB4747;
   --cor-atencao: #BEAA46;
