Subindo alterações para para jogar Sessão Unica com SwiperFicha Prototipo Layout Escalavel

--- a/src/app/(paginas)/minhas-paginas/mestre/sessao/styles.module.css
+++ b/src/app/(paginas)/minhas-paginas/mestre/sessao/styles.module.css
@@ -7,3 +7,26 @@
     height: 100%;
     padding: .5% 1%;
 }
+
+div.recipiente_avatares {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: 20%;
+    gap: 1vh;
+    align-items: center;
+}
+
+.recipiente_imagem_avatar {
+    position: relative;
+    height: 100%;
+    aspect-ratio: 1;
+}
+
+#recipiente_avatares_jogadores {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    height: 100%;
+    gap: 1vw;
+}
