--- a/src/app/(paginas)/sessao-aovivo/styles.module.css
+++ b/src/app/(paginas)/sessao-aovivo/styles.module.css
@@ -135,3 +135,22 @@
     width: 100%;
     height: 100%;
 }
+
+
+
+/*  */
+
+#recipiente_pagina_game_engine {
+    display: flex;
+    padding: 2em;
+    width: 50%;
+    height: 100%;
+}
+
+#recipiente_mensagens_game_engine {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: #261933;
+    overflow: hidden;
+}
