Alterações e Correções para visualização de Rascunhos: - Tornando Rascunho selecionado opcional, ja q pode acabar pesquisando por um Rascunho q n pertence ao Usuario Logado; - Alterando detalhes de rascunho/sessão para novo padrão; - * Alteração crítica do Consumer para manter retorno null de objeto null vindo do backend;

--- a/src/componentes/Elementos/DetalhesRascunho/styles.module.css
+++ b/src/componentes/Elementos/DetalhesRascunho/styles.module.css
@@ -44,7 +44,9 @@
 #recipiente_botoes_rascunho {
     display: flex;
     flex-direction: row;
+    width: 100%;
     gap: 5%;
+    justify-content: center;
 
     & button {
         padding: .6em;
