--- a/src/app/(paginas)/aventuras/styles.module.css
+++ b/src/app/(paginas)/aventuras/styles.module.css
@@ -125,8 +125,8 @@
 #recipiente_lista_aventuras {
     display: flex;
     flex-direction: column;
-    gap: 1.4vh;
-    width: 20vw;
+    gap: .6%;
+    width: 100%;
     padding: 0 .3vw
 }
 
