--- a/src/componentes/ElementosDeMenu/styles.module.css
+++ b/src/componentes/ElementosDeMenu/styles.module.css
@@ -24,3 +24,19 @@
     margin-left: 1vw;
     margin-top: .3vh;
 }
+
+.recipiente_lista_avatares_personagens {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 4%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    row-gap: .7em;
+}
+
+.recipiente_avatar_personagem {
+    position: relative;
+    width: 30%;
+    aspect-ratio: 1;
+}
