--- a/src/componentes/ElementosVisuais/ElementosIndividuaisEmListaDeVisualizacao/PersonagensEmListagem/styles.module.css
+++ b/src/componentes/ElementosVisuais/ElementosIndividuaisEmListaDeVisualizacao/PersonagensEmListagem/styles.module.css
@@ -36,7 +36,17 @@
     display: flex;
     flex-direction: column;
     width: 80%;
-    gap: 5vh 5%;
+    gap: 1.3em 5%;
+}
+
+div.secao_conteudo_recipiente_personagem {
+    padding: .5% 1% .3% .3%;
+    border-radius: 1em;
+    overflow: hidden;
+}
+
+.secao_conteudo_recipiente_personagem:hover {
+    box-shadow: 0 0 9px #fff;
 }
 
 .recipiente_personagem {
@@ -45,10 +55,6 @@
     gap: 3vw;
     cursor: pointer;
     border-radius: .7vw .7vw .7vw .7vw;
-}
-
-.recipiente_personagem:hover {
-    backdrop-filter: contrast(.9);
 }
 
 .recipiente_avatar_personagem {
@@ -107,40 +113,4 @@
     top: 0;
     left: 0;
     cursor: pointer;
-}
-
-#recipiente_botao_evoluir a {
-    display: block;
-    height: 100%;
-}
-
-#recipiente_botao_evoluir button {
-    padding: .6rem;
-}
-
-#recipiente_conteudo_pagina_personagem_selecionado {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
-#recipiente_abas_fichas {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    width: 100%;
-    margin-top: 3vh;
-    gap: 5vh;
-}
-
-#recipiente_provisorio_atributos {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    gap: 2vw;
-    flex-wrap: wrap;
-    row-gap: 2vh;
 }
