--- a/src/componentes/PaginaPersonagem/componentes/EdicaoFicha/styles.module.css
+++ b/src/componentes/PaginaPersonagem/componentes/EdicaoFicha/styles.module.css
@@ -3,10 +3,9 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 2% 10%;
     align-items: center;
     text-align: center;
-    gap: 5vh;
+    gap: 2%;
     font-size: 1.3rem;
     font-family: var(--fonte-cinzel);
 }
